--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#about">M.O.</a>
+              <a class="nav-link js-scroll-trigger" href="#about">Profile</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
@@ -77,10 +77,10 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <h2>Modus Operandi</h2>
-            <p>I am a multi-disciplined and energetic individual with a strong passion in software development and in mid-2017, I renounced my civil engineering position to pursue a digital career!</p>
-            <p>As a self-starter in front-end web development and programming, I operate with adept analytical and problem solving skills, am highly adaptable and a quick study. As a project manager, I bring along the ability to foster lasting client relationships and successful cradle-to-grave project oversight.</p>
-            <p>I love to learn and I'm looking for opportunities to work in creative, challenging yet exciting environments and collaborate with like-minded folks. Let's connect!
+            <h2>Profile</h2>
+            <p class="profile-text">I am a multi-disciplined and energetic individual with a strong passion in software development and in mid-2017, I renounced my civil engineering position to pursue a digital career!</p>
+            <p class="profile-text">As a self-starter in front-end web development and programming, I operate with adept analytical and problem solving skills, am highly adaptable and a quick study. As a project manager, I bring along the ability to foster lasting client relationships and successful cradle-to-grave project oversight.</p>
+            <p class="profile-text">I love to learn and I'm looking for opportunities to work in creative, challenging yet exciting environments and collaborate with like-minded folks. Let's connect!
             </p>
           </div>
         </div>
@@ -152,6 +152,12 @@
           <div class="col-lg-8 mx-auto">
             <h2>Contact</h2>
             <p>Reach out and touch faith.</p>
+            <p class="banner-social-buttons">
+              <a target="_blank" href="resume.pdf" class="btn btn-default btn-lg">
+                <i class="fa fa-file-text fa-fw"></i>
+                <span class="network-name">Résumé</span>
+              </a>
+            </p>
             <ul class="list-inline banner-social-buttons">
               <li class="list-inline-item">
                 <a target="_blank" href="mailto:theprdg@gmail.com" class="btn btn-default btn-lg">
