profile text edit

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <h2>Profile</h2>
             <p class="profile-text">I am a multi-disciplined and energetic individual with a strong passion in software development and in mid-2017, I renounced my civil engineering position to pursue a digital career!</p>
             <p class="profile-text">As a self-starter in front-end web development and programming, I operate with adept analytical and problem solving skills, am highly adaptable and a quick study. As a project manager, I bring along the ability to foster lasting client relationships and successful cradle-to-grave project oversight.</p>
-            <p class="profile-text">I love to learn and I'm looking for opportunities to work in creative, challenging yet exciting environments and collaborate with like-minded folks. Let's connect!
+            <p class="profile-text">I love to learn and I am looking for opportunities to work in creative, challenging yet exciting environments and collaborate with like-minded folks. Let's connect!
             </p>
           </div>
         </div>
