--- a/projects/04 - Countdown Timer/index.html
+++ b/projects/04 - Countdown Timer/index.html
@@ -7,15 +7,15 @@
 <body>
 	<div id="timeselect">
 		<div class="btn">minutes > </div>
-		<div class="btn timebox time">5</div>
-		<div class="btn timebox time">10</div>
-		<div class="btn timebox time">15</div>
+		<div class="btn timebox time" title="five">5</div>
+		<div class="btn timebox time" title="ten">10</div>
+		<div class="btn timebox time" title="fifteen">15</div>
 		<div class="btn divider"></div>
-		<div class="btn timebox time"><input id="value" type="text" name="time" maxlength="2"></div>
+		<div class="btn timebox time" title="custom"><input id="value" type="text" name="time" maxlength="2"></div>
 		<div class="btn">< custom (min. 1, max. 60)</div>
 		<div>
-			<div id="play" class="btn timebox action">></div>
-			<div id="stop" class="btn timebox action">x</div>
+			<div id="play" class="btn timebox action" title="play/pause">></div>
+			<div id="stop" class="btn timebox action" title="stop">x</div>
 		</div>
 	</div>
 	<div id="clock">00:00:00</div>
